force-app/main/default/objects/Warehouse_Cell__c/Warehouse_Cell__c.object-meta.xml
<CustomObject>
    <label>Warehouse Cell</label>
    <nameField>
        <label>Warehouse Cell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>