force-app/main/default/objects/Warehouse_Cell__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <externalId>true</externalId>
    <label>Address</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>