force-app/main/default/objects/Warehouse_Cell__c/fields/Container_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Container_Warehouse__c</fullName>
    <label>Container Warehouse</label>
    <referenceTo>Container_Warehouse__c</referenceTo>
    <relationshipLabel>Warehouse Cells</relationshipLabel>
    <relationshipName>Warehouse_Cells</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>