force-app/main/default/objects/Warehouse_Cell__c/fields/Is_Empty__c.field-meta.xml
<CustomField>
    <fullName>Is_Empty__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Empty</label>
    <type>Checkbox</type>
</CustomField>