force-app/main/default/objects/Warehouse_Cell__c/fields/Is_Free__c.field-meta.xml
<CustomField>
    <fullName>Is_Free__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Free</label>
    <type>Checkbox</type>
</CustomField>