force-app/main/default/objects/Warehouse_Cell__c/fields/Unique_Address__c.field-meta.xml
<CustomField>
    <fullName>Unique_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Address</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>