force-app/main/default/objects/Warehouse_Cell__c/fields/Upstream_Cell__c.field-meta.xml
<CustomField>
    <fullName>Upstream_Cell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upstream Cell</label>
    <referenceTo>Warehouse_Cell__c</referenceTo>
    <relationshipLabel>Downstream Cells</relationshipLabel>
    <relationshipName>Downstream_Cells</relationshipName>
    <type>Lookup</type>
</CustomField>