force-app/main/default/objects/Warehouse_Cell__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Container_Warehouse__c</columns>
    <columns>Is_Empty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>